# mini-openclaw

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  HANDOVER.md  MEMORY.md  README.md  pyproject.toml  requirements-ocr.txt  requirements.txt  短视频Claw使用文档.md
agent/: README.md  cli.py  context.py  events.py  loop.py  memory.py  permissions.py  planning.py  policy.py  prompts.py  runtime.py  session.py  tracer.py
backend/: README.md  client.py  fake_backend.py  multimodal.py
demo/: inject.html
docs/: architecture.md  defense_qa.md  demo_checklist.md  demo_runbook.md  observability_debug.md  teacher_acceptance.md  user_guide.md
eval/: README.md  demo_check.py  metrics.py  planning_ablation.md  planning_ablation.py  planning_ablation_results.json  rag_evaluation.py  skill_ablation.md  skill_ablation.py  skill_ablation_results.json  system_prompt_ablation.md  system_prompt_ablation.py  system_prompt_ablation_results.json  tasks.py  teacher_acceptance.py  teacher_feedback_evaluation.md  tracer.py  tui_snapshots.py
mcp/: README.md  calc_server.py  client.py
prompt/: README.md  render.py
security/: README.md  __init__.py  redteam.py  redteam_report.md
skills/: README.md  loader.py
tests/: test_artifact_preview.py  test_bilibili_auth.py  test_claude_tui.py  test_day6_security.py  test_day7_day9.py  test_personal_knowledge.py  test_teacher_acceptance.py  test_tool_arguments.py  test_tui.py  test_tui_resilience.py  test_video_improvements.py
tools/: README.md  base.py  bilibili_auth.py  bilibili_subtitles.py  external.py  fs.py  knowledge.py  mcp_client.py  (+6 more)
(+30 files in other folders)
